@@ -1,5 +1,9 @@
 Revision history for Perl extension HTML::Tagset
 
+2008-02-29  Andy Lester
+
+        * Release 3.20 -- Added <div> to the list of p_closure_barriers.
+
 2005-11-08  Andy Lester
 
         * Release 3.10 -- Another rebundling, with a new maintainer.
